ingress-tcpport/tcp-port-dep/go-app-tcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-tcp
  labels:
    app: go-app-tcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app-tcp
  template:
    metadata:
      labels:
        app: go-app-tcp
    spec:
      containers:
      - name: go-app-tcp
        image: nivasbala/go-app-tcp
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-tcp
spec:
  selector:
    app: go-app-tcp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
